# Graphic-Homework

./: .gitignore  CMakeLists.txt  README.md  res.qrc
Canvas/: CMakeLists.txt  Canvas.cpp  Canvas.h  CanvasWrapper.cpp  CanvasWrapper.h  SDLWidget.cpp  SDLWidget.h
Canvas/Drawables/: BSpline.cpp  BSpline.h  Bezier.cpp  Bezier.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleArc.cpp  CircleArc.h  Curve.h  Drawable.cpp  Drawable.h  Drawables.h  Fillable.cpp  Fillable.h  Filler.cpp  Filler.h  Line.cpp  Line.h  LineAndRect.cpp  LineAndRect.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  SeedFiller.cpp  SeedFiller.h
Canvas/GPU/: CMakeLists.txt  Clipper.cpp  Clipper.h  FrameBuffer.cpp  FrameBuffer.h  GPU.cpp  GPU.h  Pixel.cpp  Pixel.h  Raster.cpp  Raster.h  Shader.h  Shaders.h  TextureGenerator.cpp  TextureGenerator.h
Canvas/GPU/Shaders/: SimpleShader.cpp  SimpleShader.h
GLService/: AssimpQHelpers.h  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  GLHelper.cpp  GLHelper.h  Mesh.h  Model.cpp  Model.h  ModelView.cpp  ModelView.h  TextureGenerator.cpp  TextureGenerator.h
GLService/shaders/: happy_jumping.frag  seascape.frag  simple3d.frag  simple3d.vert  starry_planes.frag
GLWidget/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  Mesh.cpp
GLWidget/shaders/: heart.frag  simple.frag  simple.vert
drawable/: CMakeLists.txt  Circle.cpp  Circle.h  Drawable.h  FreeCurve.cpp  FreeCurve.h  Line.cpp  Line.h  Point.cpp  Point.h
gpu/: CMakeLists.txt  ColorBuffer.cpp  ColorBuffer.h  GPU.cpp  GPU.h  Raster.cpp  Raster.h
src/: AboutPage.cpp  AboutPage.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  ColorPalette.cpp  ColorPalette.h  Painter.cpp  Painter.h  Pen.cpp  Pen.h  SDLWidget.cpp  SDLWidget.h  main.cpp  window.cpp  window.h
utils/: CMakeLists.txt  Color.cpp  Color.h  Pixel.cpp  Pixel.h  Rect.h  Transformer2D.cpp  Transformer2D.h  Vector.h  my_math.cpp  my_math.h
